image name update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <img src= "images/922393_10200724762545851_1527763886_o.jpg" width="180" height="273" alt="Profile Picture">
+            <img src= "images/jessicaprofileimage.jpg" width="180" height="273" alt="Profile Picture">
             <h1> Jessica Richards </h1>
         </header>
         <nav>
@@ -18,7 +18,7 @@
         <main>
             <h2>CIT 230 - Assignment Portal.</h2>
                 <ul>
-                    <li>Lesson ##: <a href="#">Assignment Label</a></li>
+                    <li>Lesson 1: <a href="https://jlrich25.github.io/basicpage.html">Lesson 1: Basicpage</a></li>
                 </ul>
         </main>
         <footer>
