--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1> Jessica Richards </h1>
         </header>
         <nav>
-            <!--/* Future Navagation */-->
+            <!--/* Future Navagation will go here */-->
         </nav>
         <main>
             <h2>CIT 230 - Assignment Portal.</h2>
