Adding of fixedhtml.html and index.html update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <meta charset="viewpoint" content="width=device-width, initial-scale=1">
+        <meta name="viewpoint" content="width=device-width, initial-scale=1">
         <title>CIT 230 Assignment Portal | Jessica Richards | BYU-Idaho</title>
         <meta name="description" content="Assingment portal pafe for Jessica Richards in CIT 230: Web Fronted Development at Brigham Young University-Idaho">
         <link rel="stylesheet" href="styles/main.css">
@@ -19,10 +19,11 @@
             <h2>CIT 230 - Assignment Portal.</h2>
                 <ul>
                     <li>Lesson 1: <a href="https://jlrich25.github.io/basicpage.html">Lesson 1: Basicpage</a></li>
+                    <li>Lesson 2: <a href="https://jlrich25.github.io/fixedhtml.html">Lesson 3: HTML Markup Validation Assignment</a></li>
                 </ul>
         </main>
         <footer>
-            <p>&copy; 2018 &star; Jessica Richards &star; Utah &star; <a href="http://www.byui.edu/online">BYU-Idaho Online Learning<a/></p>
+            <p>&copy; 2018 &star; Jessica Richards &star; Utah &star; <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
         </footer>
         
         
