update lesson 3 code for fixedhtml

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h2>CIT 230 - Assignment Portal.</h2>
                 <ul>
                     <li>Lesson 1: <a href="https://jlrich25.github.io/basicpage.html">Lesson 1: Basicpage</a></li>
-                    <li>Lesson 2: <a href="https://jlrich25.github.io/fixedhtml.html">Lesson 3: HTML Markup Validation Assignment</a></li>
+                    <li>Lesson 2: <a href="http://jlrich25.github.io/assignments/lesson-3/fixedhtml.html">Lesson 3: HTML Markup Validation Assignment</a></li>
                 </ul>
         </main>
         <footer>
